smp-app-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smp-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: smp-app
  template:
    metadata:
      labels:
        app: smp-app
        version: "0.0.1"
    spec:
      containers:
      - name: smp-app
        image: daga2001/front:latest
        ports:
        - containerPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smp-app-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smp-app
  template:
    metadata:
      labels:
        app: smp-app
        version: "0.0.2"
    spec:
      containers:
      - name: smp-app
        image: daga2001/front:5e8d9707128b3e40dc978ddcac4fcad3a07bb8e7
        ports:
        - containerPort: 4000
