smp-app-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smp-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smp-app
  template:
    metadata:
      labels:
        app: smp-app
    spec:
      containers:
        - name: smp-app-container
          image: daga2001/front:latest
          ports:
            - containerPort: 4000


---
apiVersion: v1
kind: Service
metadata:
  name: smp-app-service
spec:
  selector:
    app: smp-app
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 30100
  type: NodePort
