smp-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smp-app
spec:
  selector:
    app: smp-app
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 30100
  type: NodePort
