smp-app-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: smp-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port :
      number: 4000
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: smp-app
spec:
  hosts:
  - "*"
  gateways:
  - smp-app-gateway
  http:
  - route:
    - destination:
        host: smp-app.istio.svc.cluster.local
        subset: version1
      weight: 100
    - destination:
        host: smp-app.istio.svc.cluster.local
        subset: version2
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: smp-app
spec:
  host: smp-app
  subsets:
  - name: version1
    labels:
      version: "0.0.1"
  - name: version2
    labels:
      version: "0.0.2"
